[project]
name = "linsoo-save-image"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Linsoo/comfyui-linsoo-save-image"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-linsoo-save-image"
Icon = ""
